WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62783
[Chromium] Draw search tickmarks on overlay scrollbars
https://bugs.webkit.org/show_bug.cgi?id=62783
Summary
[Chromium] Draw search tickmarks on overlay scrollbars
Sailesh Agrawal
Reported
2011-06-15 23:41:56 PDT
[Chromium] Draw search tickmarks on overlay scrollbars
Attachments
Patch
(9.25 KB, patch)
2011-06-15 23:45 PDT
,
Sailesh Agrawal
no flags
Details
Formatted Diff
Diff
Patch
(9.91 KB, patch)
2011-06-16 13:53 PDT
,
Sailesh Agrawal
no flags
Details
Formatted Diff
Diff
Patch
(10.38 KB, patch)
2011-06-20 16:34 PDT
,
Sailesh Agrawal
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Sailesh Agrawal
Comment 1
2011-06-15 23:45:42 PDT
Created
attachment 97407
[details]
Patch
Sailesh Agrawal
Comment 2
2011-06-15 23:47:59 PDT
Adding Cole and Robert for feedback on the UI. Screenshots here:
http://www.dropmocks.com/mWaIN
Nico Weber
Comment 3
2011-06-15 23:57:40 PDT
Looks like you added me instead of Cole. I like the screenshots fwiw.
Sailesh Agrawal
Comment 4
2011-06-16 00:01:52 PDT
Trying to add Cole gets me a "
alcor@google.com
" didn't match anything error. I sent him an email instead.
Sailesh Agrawal
Comment 5
2011-06-16 11:53:10 PDT
Got an LGTM from Cole. Please take a look.
Mihai Parparita
Comment 6
2011-06-16 13:35:19 PDT
Comment on
attachment 97407
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=97407&action=review
> Source/WebCore/platform/chromium/ScrollbarThemeChromiumMac.mm:488 > + if (wkScrollbarPainterTrackAlpha(scrollbarPainter) >= 1.0)
Might make more sense fo the tickmarks to use the same alpha as the track alpha, so that they fade out gradually too.
Eric Seidel (no email)
Comment 7
2011-06-16 13:40:13 PDT
Comment on
attachment 97407
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=97407&action=review
> Source/WebCore/platform/chromium/ScrollbarOverlayUtilitiesChromiumMac.h:61 > +void wkScrollbarPainterPaintTrack(WKScrollbarPainterRef, bool enabled, double value, CGFloat proportion, NSRect frameRect); > +void wkScrollbarPainterPaintKnob(WKScrollbarPainterRef);
I assume this is our version of WebKitSystemInterface.h?
Sailesh Agrawal
Comment 8
2011-06-16 13:53:57 PDT
Created
attachment 97488
[details]
Patch
Sailesh Agrawal
Comment 9
2011-06-16 13:54:45 PDT
> Might make more sense fo the tickmarks to use the same alpha as the track alpha, so that they fade out gradually too.
Good idea. Fixed.
> I assume this is our version of WebKitSystemInterface.h?
Yea.
WebKit Review Bot
Comment 10
2011-06-16 15:08:25 PDT
Comment on
attachment 97488
[details]
Patch Clearing flags on attachment: 97488 Committed
r89073
: <
http://trac.webkit.org/changeset/89073
>
WebKit Review Bot
Comment 11
2011-06-16 15:08:31 PDT
All reviewed patches have been landed. Closing bug.
Yuta Kitamura
Comment 12
2011-06-16 23:09:27 PDT
Hi, your change seemed to cause a compile error in our clang bots: In file included from /b/build/slave/Mac_Clang_Builder__dbg_/build/src/third_party/WebKit/Source/WebCore/WebCore.gyp/../platform/chromium/ScrollAnimatorChromiumMac.mm:36: ../platform/chromium/ScrollbarThemeChromiumMac.h:74:10: error: 'WebCore::ScrollbarThemeChromiumMac::paintTickmarks' hides overloaded virtual function [-Werror,-Woverloaded-virtual] void paintTickmarks(Scrollbar*, GraphicsContext* drawingContext, bool canDrawDirectly, float alpha); ^ ../platform/ScrollbarThemeComposite.h:65:18: note: hidden overloaded virtual function 'WebCore::ScrollbarThemeComposite::paintTickmarks' declared here virtual void paintTickmarks(GraphicsContext*, Scrollbar*, const IntRect&) {} ^ 1 error generated. Could you fix this at your earliest convenience?
Yuta Kitamura
Comment 13
2011-06-16 23:18:32 PDT
Reverted
r89073
for reason: Broke Chromium Clang build Committed
r89120
: <
http://trac.webkit.org/changeset/89120
>
Eric Seidel (no email)
Comment 14
2011-06-17 09:36:45 PDT
We need a clang EWS and clang bot on build.webkit.org to stop this "this broke clang but nothing else" rollout nonsense. This is at least the 3rd bug I've seen this happen to in the last week. :(
Eric Seidel (no email)
Comment 15
2011-06-17 09:37:37 PDT
Also, why should a build error ever cause a rollout? I would imagine build errors are generally super-easy to fix? Not that I'm against rollouts! It just seems silly to do this dance every time for a clang-only build error.
Sailesh Agrawal
Comment 16
2011-06-20 16:34:05 PDT
Created
attachment 97886
[details]
Patch
Sailesh Agrawal
Comment 17
2011-06-20 16:37:07 PDT
Fixed clang error. The problem was that there was already a paintTickmarks() method in the super class. I changed the patch to use the same method signature as the super class. The patch passes the chromium clang bog:
http://build.chromium.org/p/tryserver.chromium/builders/mac_clang/builds/899
Please take another look. Thanks.
WebKit Review Bot
Comment 18
2011-06-20 18:22:19 PDT
Comment on
attachment 97886
[details]
Patch Clearing flags on attachment: 97886 Committed
r89326
: <
http://trac.webkit.org/changeset/89326
>
WebKit Review Bot
Comment 19
2011-06-20 18:22:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug